chore: cleaned up package names

--- a/expo-module.config.json
+++ b/expo-module.config.json
@@ -1,5 +1,5 @@
 {
-  "name": "expo-haptics",
+  "name": "react-native-continuous-haptics",
   "platforms": ["ios", "android"],
   "ios": {
     "modules": ["HapticsModule"]
