--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expo-haptics",
+  "name": "react-native-continuous-haptics",
   "version": "12.4.0",
   "description": "Provides access to the system's haptics engine on iOS and vibration effects on Android.",
   "main": "build/Haptics.js",
@@ -17,20 +17,15 @@
   "keywords": [
     "react-native",
     "expo",
-    "expo-haptics",
+    "react-native-continuous-haptics",
     "haptics"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/expo/expo.git",
-    "directory": "packages/expo-haptics"
+    "url": "https://github.com/Jrh0203/react-native-continuous-haptics.git",
   },
-  "bugs": {
-    "url": "https://github.com/expo/expo/issues"
-  },
-  "author": "650 Industries, Inc.",
+  "author": "John Herrick",
   "license": "MIT",
-  "homepage": "https://docs.expo.dev/versions/latest/sdk/haptics/",
   "dependencies": {},
   "devDependencies": {
     "expo-module-scripts": "^3.0.0"
