--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jrh0203/react-native-continuous-haptics.git",
+    "url": "https://github.com/Jrh0203/react-native-continuous-haptics.git"
   },
   "author": "John Herrick",
   "license": "MIT",
